# liteparse

./: Cargo.toml  full.Dockerfile
.github/workflows/: ci-node.yml  ci-python.yml  ci-wasm.yml  deploy-cloudrun-job.yml  release-crates.yml  release-node.yml  release-python.yml  release-wasm.yml  release.yml  sync-docs.yml
crates/liteparse/: Cargo.toml
crates/liteparse-napi/: Cargo.toml
crates/liteparse-python/: Cargo.toml
crates/liteparse-wasm/: Cargo.toml
crates/liteparse/src/: config.rs  conversion.rs  extract.rs  ocr_merge.rs  parser.rs  projection.rs  render.rs  types.rs
crates/liteparse/src/ocr/: http_simple.rs  mod.rs  tesseract.rs
crates/liteparse/src/output/: json.rs  text.rs
crates/pdfium/: Cargo.toml
crates/pdfium-sys/: Cargo.toml
scripts/: compare-dataset.sh  generate-api-docs.sh  strip-impls-from-api-docs.py
