[package]
name = "liteparse-napi"
version = "2.0.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js native bindings for LiteParse"

[lib]
crate-type = ["cdylib"]

[features]
default = ["tesseract"]
tesseract = ["liteparse/tesseract"]

[dependencies]
liteparse = { package = "liteparse", version = "2.0.4", path = "../liteparse", default-features = false }
pdfium-sys = { package = "liteparse-pdfium-sys", version = "1.1.0", path = "../pdfium-sys" }
napi = { version = "2", features = ["async", "serde-json", "napi9"] }
napi-derive = "2"
pdfium = { package = "liteparse-pdfium", version = "1.0.1", path = "../pdfium" }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"
