[package]
name = "liteparse-python"
version = "2.0.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for LiteParse"

[lib]
name = "_liteparse"
crate-type = ["cdylib"]

[features]
default = ["tesseract"]
tesseract = ["liteparse/tesseract"]

[dependencies]
liteparse = { package = "liteparse", version = "2.0.4", path = "../liteparse", default-features = false }
pdfium-sys = { package = "liteparse-pdfium-sys", version = "1.1.0", path = "../pdfium-sys" }
pdfium = { package = "liteparse-pdfium", version = "1.0.1", path = "../pdfium" }
clap = { version = "4.5.55", features = ["derive"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
anyhow = "1.0.102"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
