[package]
name = "liteparse-wasm"
version = "2.0.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LiteParse PDF parser — WebAssembly bindings for the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
liteparse = { path = "../liteparse", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["panic_hook"]
panic_hook = ["dep:console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
