[package]
name = "liteparse"
version = "2.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast, lightweight PDF and document parsing with spatial text extraction"

[lib]
name = "liteparse_rs"

[[bin]]
name = "lit"
path = "src/main.rs"

[features]
default = ["tesseract"]
tesseract = ["dep:tesseract-rs"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.55", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
infer = "0.19.0"
pdfium = { package = "liteparse-pdfium", version = "1.0.0", path = "../pdfium" }
pdfium-sys = { package = "liteparse-pdfium-sys", version = "1.0.0", path = "../pdfium-sys" }
reqwest = { version = "0.13.3", features = ["blocking", "json", "form", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tesseract-rs = { version = "0.2", features = ["build-tesseract"], optional = true }
tokio = { version = "1.52.3", features = ["full"] }
