[package]
name = "liteparse-pdfium"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust wrapper around PDFium for liteparse"

[dependencies]
pdfium-sys = { package = "liteparse-pdfium-sys", version = "1.0.0", path = "../pdfium-sys" }
